--- a/Main/mysite.html
+++ b/Main/mysite.html
@@ -11,9 +11,9 @@
   <header>
     <nav class="text-right">
       <ul>
-        <li> <a href="https://github.com/">Github</a></li>
+        <li> <a href="https://github.com/kabdomora">Github</a></li>
         <li> <a href="#">Portfolio</a></li>
-        <li> <a href="#contact">Contact</a></li>
+        <li> <a href="#contact">Email</a></li>
       </ul>
     </nav>
   </header>
